CNV-61535: modal buttons fix alignment

--- a/src/utils/components/ColumnManagementModal/column-management-modal.scss
+++ b/src/utils/components/ColumnManagementModal/column-management-modal.scss
@@ -1,7 +1,3 @@
-.column-management-modal__action-list {
-  justify-content: end;
-}
-
 .data-list-row-item label {
   cursor: pointer;
 }
